--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -45,12 +45,31 @@
   <ItemGroup>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShapeRecords\EndShapeRecord.cs" />
+    <Compile Include="ShapeRecords\NonEdgeFlags.cs" />
+    <Compile Include="ShapeRecords\ShapeRecord.cs" />
+    <Compile Include="ShapeRecords\ShapeRecordFactory.cs" />
+    <Compile Include="ShapeRecords\ShapeRecordType.cs" />
+    <Compile Include="ShapeRecords\StyleChangeRecord.cs" />
+    <Compile Include="Structs\FillStyleArray.cs" />
+    <Compile Include="Structs\FillStyleStruct.cs" />
+    <Compile Include="Structs\FocalGradientStruct.cs" />
+    <Compile Include="Structs\GradientStruct.cs" />
+    <Compile Include="Structs\GradRecordStruct.cs" />
+    <Compile Include="Structs\LineStyleArray.cs" />
+    <Compile Include="Structs\LineStyleStruct.cs" />
+    <Compile Include="Structs\MatrixStruct.cs" />
+    <Compile Include="Structs\ShapeStruct.cs" />
+    <Compile Include="Structs\ShapeWithStyleStruct.cs" />
     <Compile Include="SwfFile.cs" />
     <Compile Include="SwfHeader.cs" />
-    <Compile Include="Structs\SwfRectStruct.cs" />
-    <Compile Include="Structs\SwfRgbaStruct.cs" />
-    <Compile Include="Structs\SwfArgbStruct.cs" />
-    <Compile Include="Structs\SwfRgbStruct.cs" />
+    <Compile Include="Structs\RectStruct.cs" />
+    <Compile Include="Structs\RgbaStruct.cs" />
+    <Compile Include="Structs\ArgbStruct.cs" />
+    <Compile Include="Structs\RgbStruct.cs" />
+    <Compile Include="Tags\DefineShape2Tag.cs" />
+    <Compile Include="Tags\DefineShape3Tag.cs" />
+    <Compile Include="Tags\DefineShapeTag.cs" />
     <Compile Include="Tags\DoABCTag.cs" />
     <Compile Include="Tags\EnableTelemetryTag.cs" />
     <Compile Include="Tags\EndTag.cs" />
