implement EnableDebugger tags

--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -74,6 +74,8 @@
     <Compile Include="Tags\DefineShapeTag.cs" />
     <Compile Include="Tags\DefineSpriteTag.cs" />
     <Compile Include="Tags\DoABCTag.cs" />
+    <Compile Include="Tags\EnableDebugger2Tag.cs" />
+    <Compile Include="Tags\EnableDebuggerTag.cs" />
     <Compile Include="Tags\EnableTelemetryTag.cs" />
     <Compile Include="Tags\EndTag.cs" />
     <Compile Include="Tags\FileAttributesTag.cs" />
