--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ShapeRecords\ShapeRecordType.cs" />
     <Compile Include="ShapeRecords\StraightEdgeRecord.cs" />
     <Compile Include="ShapeRecords\StyleChangeRecord.cs" />
+    <Compile Include="Structs\CXformStruct.cs" />
     <Compile Include="Structs\FillStyleArray.cs" />
     <Compile Include="Structs\FillStyleStruct.cs" />
     <Compile Include="Structs\FocalGradientStruct.cs" />
@@ -81,6 +82,7 @@
     <Compile Include="Tags\FileAttributesTag.cs" />
     <Compile Include="Tags\FrameLabelTag.cs" />
     <Compile Include="Tags\MetadataTag.cs" />
+    <Compile Include="Tags\PlaceObjectTag.cs" />
     <Compile Include="Tags\ProductInfoTag.cs" />
     <Compile Include="Tags\ScriptLimitsTag.cs" />
     <Compile Include="Tags\SetBackgroundColorTag.cs" />
