implement more tags

--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Structs\FillStyleArray.cs" />
     <Compile Include="Structs\FillStyleStruct.cs" />
     <Compile Include="Structs\FocalGradientStruct.cs" />
+    <Compile Include="Structs\GlyphEntryStruct.cs" />
     <Compile Include="Structs\GradientStruct.cs" />
     <Compile Include="Structs\GradRecordStruct.cs" />
     <Compile Include="Structs\LineStyleArray.cs" />
@@ -71,6 +72,9 @@
     <Compile Include="Structs\MatrixStruct.cs" />
     <Compile Include="Structs\ShapeStruct.cs" />
     <Compile Include="Structs\ShapeWithStyleStruct.cs" />
+    <Compile Include="Structs\SoundEnvelopeStruct.cs" />
+    <Compile Include="Structs\SoundInfoStruct.cs" />
+    <Compile Include="Structs\TextRecordStruct.cs" />
     <Compile Include="SwfFile.cs" />
     <Compile Include="SwfHeader.cs" />
     <Compile Include="Structs\RectStruct.cs" />
@@ -85,12 +89,16 @@
     <Compile Include="Tags\DefineBitsLossless2Tag.cs" />
     <Compile Include="Tags\DefineBitsLosslessTag.cs" />
     <Compile Include="Tags\DefineBitsTag.cs" />
+    <Compile Include="Tags\DefineFontInfo2Tag.cs" />
     <Compile Include="Tags\DefineFontInfoTag.cs" />
     <Compile Include="Tags\DefineFontTag.cs" />
     <Compile Include="Tags\DefineShape2Tag.cs" />
     <Compile Include="Tags\DefineShape3Tag.cs" />
     <Compile Include="Tags\DefineShapeTag.cs" />
+    <Compile Include="Tags\DefineSoundTag.cs" />
     <Compile Include="Tags\DefineSpriteTag.cs" />
+    <Compile Include="Tags\DefineText2Tag.cs" />
+    <Compile Include="Tags\DefineTextTag.cs" />
     <Compile Include="Tags\DoABCTag.cs" />
     <Compile Include="Tags\DoActionTag.cs" />
     <Compile Include="Tags\DoInitActionTag.cs" />
@@ -106,13 +114,20 @@
     <Compile Include="Tags\PlaceObject2Tag.cs" />
     <Compile Include="Tags\PlaceObjectTag.cs" />
     <Compile Include="Tags\ProductInfoTag.cs" />
+    <Compile Include="Tags\ProtectTag.cs" />
     <Compile Include="Tags\RemoveObject2Tag.cs" />
     <Compile Include="Tags\RemoveObjectTag.cs" />
+    <Compile Include="Sounds\SampleRate.cs" />
+    <Compile Include="Sounds\SampleSize.cs" />
     <Compile Include="Tags\ScriptLimitsTag.cs" />
     <Compile Include="Tags\SetBackgroundColorTag.cs" />
     <Compile Include="Tags\ShowFrameTag.cs" />
+    <Compile Include="Sounds\SoundFormat.cs" />
     <Compile Include="Tags\SoundStreamHead2Tag.cs" />
     <Compile Include="Tags\SoundStreamHeadTag.cs" />
+    <Compile Include="Sounds\SoundType.cs" />
+    <Compile Include="Tags\StartSound2Tag.cs" />
+    <Compile Include="Tags\StartSoundTag.cs" />
     <Compile Include="Tags\SwfTag.cs" />
     <Compile Include="Tags\SymbolClassTag.cs" />
     <Compile Include="Tags\TagFactory.cs" />
