--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Structs\GlyphEntryStruct.cs" />
     <Compile Include="Structs\GradientStruct.cs" />
     <Compile Include="Structs\GradRecordStruct.cs" />
+    <Compile Include="Structs\KerningRecordStruct.cs" />
     <Compile Include="Structs\LineStyleArray.cs" />
     <Compile Include="Structs\LineStyle2Struct.cs" />
     <Compile Include="Structs\LineStyleStruct.cs" />
@@ -90,6 +91,8 @@
     <Compile Include="Tags\DefineBitsLossless2Tag.cs" />
     <Compile Include="Tags\DefineBitsLosslessTag.cs" />
     <Compile Include="Tags\DefineBitsTag.cs" />
+    <Compile Include="Tags\DefineFont2Tag.cs" />
+    <Compile Include="Tags\DefineFont3Tag.cs" />
     <Compile Include="Tags\DefineFontInfo2Tag.cs" />
     <Compile Include="Tags\DefineFontInfoTag.cs" />
     <Compile Include="Tags\DefineFontTag.cs" />
