--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -43,6 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Filters\BevelFilter.cs" />
+    <Compile Include="Filters\BlurFilter.cs" />
+    <Compile Include="Filters\ColorMatrixFilter.cs" />
+    <Compile Include="Filters\ConvolutionFilter.cs" />
+    <Compile Include="Filters\DropShadowFilter.cs" />
+    <Compile Include="Filters\GlowFilter.cs" />
+    <Compile Include="Filters\GradientBevelFilter.cs" />
+    <Compile Include="Filters\GradientGlowFilter.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeRecords\CurvedEdgeRecord.cs" />
@@ -55,6 +63,9 @@
     <Compile Include="ShapeRecords\StyleChangeRecord.cs" />
     <Compile Include="Structs\ActionRecordStruct.cs" />
     <Compile Include="Structs\AlphaBitmapDataStruct.cs" />
+    <Compile Include="Structs\BlendMode.cs" />
+    <Compile Include="Structs\ButtonCondActionStruct.cs" />
+    <Compile Include="Structs\ButtonRecordStruct.cs" />
     <Compile Include="Structs\ClipActionRecordStruct.cs" />
     <Compile Include="Structs\ClipEventFlagsStruct.cs" />
     <Compile Include="Structs\BitmapDataStruct.cs" />
@@ -63,6 +74,8 @@
     <Compile Include="Structs\CXformStruct.cs" />
     <Compile Include="Structs\FillStyleArray.cs" />
     <Compile Include="Structs\FillStyleStruct.cs" />
+    <Compile Include="Structs\FilterListStruct.cs" />
+    <Compile Include="Structs\FilterStruct.cs" />
     <Compile Include="Structs\FocalGradientStruct.cs" />
     <Compile Include="Structs\GlyphEntryStruct.cs" />
     <Compile Include="Structs\GradientStruct.cs" />
@@ -91,6 +104,8 @@
     <Compile Include="Tags\DefineBitsLossless2Tag.cs" />
     <Compile Include="Tags\DefineBitsLosslessTag.cs" />
     <Compile Include="Tags\DefineBitsTag.cs" />
+    <Compile Include="Tags\DefineButton2Tag.cs" />
+    <Compile Include="Tags\DefineButtonTag.cs" />
     <Compile Include="Tags\DefineEditTextTag.cs" />
     <Compile Include="Tags\DefineFont2Tag.cs" />
     <Compile Include="Tags\DefineFont3Tag.cs" />
@@ -149,6 +164,10 @@
     <ProjectReference Include="..\external\7zip\Compress\LzmaAlone\LzmaAlone.csproj">
       <Project>{ce33df18-f9c8-4d6f-9057-dbb4db96e973}</Project>
       <Name>LzmaAlone</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\external\System.Half\System.Half.csproj">
+      <Project>{1c871681-737c-45f4-9ce4-045366491a46}</Project>
+      <Name>System.Half</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
