implement DefineMorphShape tags and DefineButtonSoundTag

--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -66,12 +66,14 @@
     <Compile Include="Structs\BlendMode.cs" />
     <Compile Include="Structs\ButtonCondActionStruct.cs" />
     <Compile Include="Structs\ButtonRecordStruct.cs" />
+    <Compile Include="Structs\CapStyle.cs" />
     <Compile Include="Structs\ClipActionRecordStruct.cs" />
     <Compile Include="Structs\ClipEventFlagsStruct.cs" />
     <Compile Include="Structs\BitmapDataStruct.cs" />
     <Compile Include="Structs\AlphaColorMapDataStruct.cs" />
     <Compile Include="Structs\ColorMapDataStruct.cs" />
     <Compile Include="Structs\CXformStruct.cs" />
+    <Compile Include="Structs\FillStyle.cs" />
     <Compile Include="Structs\FillStyleArray.cs" />
     <Compile Include="Structs\FillStyleStruct.cs" />
     <Compile Include="Structs\FilterListStruct.cs" />
@@ -80,15 +82,25 @@
     <Compile Include="Structs\GlyphEntryStruct.cs" />
     <Compile Include="Structs\GradientStruct.cs" />
     <Compile Include="Structs\GradRecordStruct.cs" />
+    <Compile Include="Structs\InterpolationMode.cs" />
+    <Compile Include="Structs\JoinStyle.cs" />
     <Compile Include="Structs\KerningRecordStruct.cs" />
     <Compile Include="Structs\LineStyleArray.cs" />
     <Compile Include="Structs\LineStyle2Struct.cs" />
     <Compile Include="Structs\LineStyleStruct.cs" />
     <Compile Include="Structs\MatrixStruct.cs" />
+    <Compile Include="Structs\MorphFillStyleArrayStruct.cs" />
+    <Compile Include="Structs\MorphFillStyleStruct.cs" />
+    <Compile Include="Structs\MorphGradientStruct.cs" />
+    <Compile Include="Structs\MorphGradRecordStruct.cs" />
+    <Compile Include="Structs\MorphLineStyle2Struct.cs" />
+    <Compile Include="Structs\MorphLineStyleArrayStruct.cs" />
+    <Compile Include="Structs\MorphLineStyleStruct.cs" />
     <Compile Include="Structs\ShapeStruct.cs" />
     <Compile Include="Structs\ShapeWithStyleStruct.cs" />
     <Compile Include="Structs\SoundEnvelopeStruct.cs" />
     <Compile Include="Structs\SoundInfoStruct.cs" />
+    <Compile Include="Structs\SpreadMode.cs" />
     <Compile Include="Structs\TextRecordStruct.cs" />
     <Compile Include="SwfFile.cs" />
     <Compile Include="SwfHeader.cs" />
@@ -105,6 +117,7 @@
     <Compile Include="Tags\DefineBitsLosslessTag.cs" />
     <Compile Include="Tags\DefineBitsTag.cs" />
     <Compile Include="Tags\DefineButton2Tag.cs" />
+    <Compile Include="Tags\DefineButtonSoundTag.cs" />
     <Compile Include="Tags\DefineButtonTag.cs" />
     <Compile Include="Tags\DefineEditTextTag.cs" />
     <Compile Include="Tags\DefineFont2Tag.cs" />
@@ -112,6 +125,8 @@
     <Compile Include="Tags\DefineFontInfo2Tag.cs" />
     <Compile Include="Tags\DefineFontInfoTag.cs" />
     <Compile Include="Tags\DefineFontTag.cs" />
+    <Compile Include="Tags\DefineMorphShape2Tag.cs" />
+    <Compile Include="Tags\DefineMorphShapeTag.cs" />
     <Compile Include="Tags\DefineShape2Tag.cs" />
     <Compile Include="Tags\DefineShape3Tag.cs" />
     <Compile Include="Tags\DefineShape4Tag.cs" />
