--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Filters\DropShadowFilter.cs" />
     <Compile Include="Filters\GlowFilter.cs" />
     <Compile Include="Filters\GradientBevelFilter.cs" />
+    <Compile Include="Filters\GradientGlowAndBevelFilter.cs" />
     <Compile Include="Filters\GradientGlowFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeRecords\CurvedEdgeRecord.cs" />
