--- a/SwfSharp/SwfSharp.csproj
+++ b/SwfSharp/SwfSharp.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Tags\DefineText2Tag.cs" />
     <Compile Include="Tags\DefineTextTag.cs" />
     <Compile Include="Tags\DefineVideoStreamTag.cs" />
+    <Compile Include="Tags\DoABC2Tag.cs" />
     <Compile Include="Tags\DoABCTag.cs" />
     <Compile Include="Tags\DoActionTag.cs" />
     <Compile Include="Tags\DoInitActionTag.cs" />
